added table & spreadsheet downloads, added progress bar (not yet functional), made it prettier